--- a/css/tabletViewStyle.css
+++ b/css/tabletViewStyle.css
@@ -118,21 +118,19 @@ header
 }
 .news-article p.date
 {
-    font-size: 8px;
+    font-size: 12px;
 }
 .news-article img
 {
     width: 90%;
-}
-.news-article a
-{
-    margin-left: 20px;
+    padding-bottom: 10px;
 }
 .news-article a
 {
     width: 100px;
     border-radius: 2px;
     padding: 10px 20px;
+    margin-left: 20px;
 }
 footer
 {
